<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/screen_margin"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <TextView
            style="@style/TextView.Title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_questions" />

        <TextView
            style="@style/TextView.Title"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/title_questions_1" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/veg"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vegeterian" />

            <RadioButton
                android:id="@+id/nonveg"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_vegeterian" />

            <RadioButton
                android:id="@+id/both"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/both" />
        </RadioGroup>

        <TextView
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/title_question_2" />

        <CheckBox
            android:id="@+id/cb_diabetes"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/diabetes" />

        <CheckBox
            android:id="@+id/cb_cholestrol"
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cholestrol" />

        <Button
            android:id="@+id/bt_submit"
            style="@style/Button"
            android:layout_marginTop="16dp"
            android:text="@string/submit" />
    </LinearLayout>

</ScrollView>